# Transazioni_Finanziarie_Lentini

./: Bank.cpp  Bank.h  BankAccount.cpp  BankAccount.h  CMakeLists.txt  README.md  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
test/: BankAccountTest.cpp  CMakeLists.txt  TransactionTest.cpp  UserTest.cpp  runAllTest.cpp
